modified HospitalInfoController #2-heejae